--- a/css/resources.css
+++ b/css/resources.css
@@ -76,6 +76,7 @@ td {
 
 .tabs-title a {
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .tabs-title > a:focus,
